# comparecimento-eleicoes

./: .gitignore  main.py  pyproject.toml
infra/: s3_setup.py
notebooks/: explore_bronze.ipynb  explore_bronze.py  leitura_arquivo_local.ipynb  read_csv_raw.ipynb
src/extract/: tse_downloader.py
src/transform/: raw_to_bronze.py
